Istio/Calculator/basicop/divide/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: divide
  namespace: <PROJECT>
  labels:
    app: divide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: divide    
  template:
    metadata:
      labels:
        app: divide         
    spec:
      containers:
      - image: <CONTAINER>
        name: divide-container
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-server
      imagePullSecrets:
      - name: private-registry
