Istio/Calculator/basicop/divide/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: divide
  namespace: <PROJECT>
  labels:
    app: divide
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: divide
